--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am the Systems & Platforms Coordinator for my school</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Virginia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love reading</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Retirement</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Georgia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Developing these skills will assist me with my current job</p>
     </section>
 
     <footer id="footer">
